Fix optionsMenu order column on mobile

--- a/src/routes/game/components/elements/optionsMenu/OptionsMenu.module.css
+++ b/src/routes/game/components/elements/optionsMenu/OptionsMenu.module.css
@@ -152,4 +152,12 @@
   .column {
     width: 100%;
   }
+
+  .column:first-child {
+    order: 2;
+  }
+
+  .column:last-child {
+    order: 1;
+  }
 }
